

PROJECT("maxflow")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5 FATAL_ERROR)

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
  cmake_policy(SET CMP0012 NEW)
  IF(${CMAKE_VERSION} VERSION_GREATER 3.0.0) 
    cmake_policy(SET CMP0042 NEW)
  ENDIF()
endif(COMMAND cmake_policy)


SET(PACKAGE_NAME "maxflow")
SET(MAJOR_VERSION 3)
SET(MINOR_VERSION 0)
SET(MICRO_VERSION 4)
SET(INTERFACE_AGE 0)
SET(BINARY_AGE    0)


SET(PACKAGE_VERSION "${MAJOR_VERSION}.${MINOR_VERSION}.${MICRO_VERSION}")
SET(VERSION "${MAJOR_VERSION}.${MINOR_VERSION}")
SET(PACKAGE_NAME "${PACKAGE_NAME}-${VERSION}")
SET(prefix ${CMAKE_INSTALL_PREFIX})


MATH(EXPR MAXFLOW_CURRENT "${MICRO_VERSION} - ${BINARY_AGE}")
SET(MAXFLOW_REVISION ${INTERFACE_AGE})
MATH(EXPR MAXFLOW_AGE "${BINARY_AGE} - ${INTERFACE_AGE}")

SET(LIBRARY_SOVERSION_INFO "${MAXFLOW_CURRENT}")
SET(LIBRARY_VERSION_INFO "${MAXFLOW_CURRENT}.${MAXFLOW_AGE}.${MAXFLOW_REVISION}")

INCLUDE(GNUInstallDirs)

ADD_LIBRARY(maxflow SHARED maxflow.cpp)
SET_TARGET_PROPERTIES(maxflow PROPERTIES 
  SOVERSION ${LIBRARY_SOVERSION_INFO}
  VERSION ${LIBRARY_VERSION_INFO}
  )

INSTALL(TARGETS maxflow
  EXPORT MaxFlow
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")  


SET(MAXFLOW_HEADER
  block.h,
  graph.h,
  graph.cpp)

SET(INCLUDE_INSTALL_PATH ${CMAKE_INSTALL_INCLUDEDIR}/maxflow-${VERSION})
SET(LIBRARY_INSTALL_PATH ${CMAKE_INSTALL_LIBDIR})

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/maxflow.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/maxflow.pc)

INSTALL(FILES ${MAXFLOW_HEADER} DESTINATION ${INCLUDE_INSTALL_PATH})
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/maxflow.pc DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/pkgconfig")
